# polymind

./: .env.example  .gitignore  README.md  dev.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0231a683b18e_add_phase4_chat_reward_payouts_batch_.py  364027c39c45_add_chain_event_log_table.py  73010ac41a9b_initial_migration.py  790143c99274_add_phase3_admin_tables.py  7f2c07b2d699_add_admin_audit_and_finalization_.py  a72257d59122_add_event_slug.py  a7aaa0c86803_phase2_mvp_tables.py  c3787f5e5df3_add_event_index_to_chain_event_log.py  cf73ea66724a_add_expired_propose_mode_and_single_.py  d70924df1758_add_auth_nonce_creator_rewards_and_.py  df6463fb62f4_add_admin_compatibility_tables.py  f37dbb19e639_initial.py
apps/api/app/: lifespan.py  main.py
apps/api/app/clients/: polymarket.py  solana.py
apps/api/app/core/: config.py  exceptions.py  logging.py  response.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/dependencies/: auth.py
apps/api/app/middleware/: logging.py
apps/api/app/models/: __init__.py  activity.py  admin_account.py  admin_audit_log.py  admin_event_admin.py  batch_transfer.py  campaign_meta.py  chain_event_log.py  chat_message.py  config.py  creator_reward.py  dashboard_stats.py  dispute.py  event.py  event_category.py  event_tag.py  (+14 more)
apps/api/scripts/: seed.py
solana/indexer/: Cargo.toml
solana/indexer/migrations/: 001_init.sql
solana/indexer/src/: db.rs  main.rs  parser.rs  rpc.rs
(+286 files in other folders)
