[package]
name = "polymind-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
anchor-lang = "1.0.2"
polymind = { path = "../programs/polymind/programs/polymind", default-features = false, features = ["no-entrypoint"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
